# adventofcode-cpp-container

./: .gitignore  CMakeLists.txt  EtCetera.md  README.md  README_old.md  cpp notes links.txt
.circleci/: config.yml
.devcontainer/: Dockerfile
src/: main.cpp  solution01.cpp  solution01.h
src/2020/: main.cpp
unit_tests/: Test.cpp  test_solution01.cpp
